@@ -2,6 +2,8 @@
 v4.0.1-git
 ----------
 
+[jan] Use modification and creation dates from backend if available (Request
+      #11591).
 [jan] Use encoded UIDs as IDs in Kolab driver.
 
 
